export const snapshot = {};

snapshot[`confirm prompt > should confirm 1`] = `
stdout:
"? Please confirm (y/N) » 
❯ some hint\\x1b[1A\\x1b[26G\\x1b[G\\x1b[0J
? Please confirm (y/N) » yes
❯ some hint\\x1b[1A\\x1b[27G\\x1b[G\\x1b[0J
? Please confirm (y/N) » Yes
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`confirm prompt > should not confirm 1`] = `
stdout:
"? Please confirm (y/N) » 
❯ some hint\\x1b[1A\\x1b[26G\\x1b[G\\x1b[0J
? Please confirm (y/N) » no
❯ some hint\\x1b[1A\\x1b[27G\\x1b[G\\x1b[0J
? Please confirm (y/N) » No
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`confirm prompt > should not confirm by default 1`] = `
stdout:
"? Please confirm (y/N) » 
❯ some hint\\x1b[1A\\x1b[26G\\x1b[G\\x1b[0J
? Please confirm (y/N) » No
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;
